--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "watch-store",
+    "name": "store-react-context",
     "version": "1.0.0",
     "description": "",
     "main": "webpack.config.js",
