--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "store-react-context",
     "private": true,
     "version": "1.0.0",
-    "main": "webpack.config.babel.js",
     "scripts": {
         "webpack": "webpack",
         "webpack-dev-server": "webpack-dev-server",
@@ -14,6 +13,7 @@
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
+        "@babel/register": "^7.10.1",
         "babel-loader": "^8.1.0",
         "css-loader": "^3.5.3",
         "eslint": "^7.2.0",
