--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "version": "1.0.0",
     "scripts": {
+        "firebase": "firebase",
         "webpack": "webpack",
         "webpack-dev-server": "webpack-dev-server",
         "start": "webpack-dev-server --mode development",
@@ -18,6 +19,7 @@
         "css-loader": "^3.5.3",
         "eslint": "^7.2.0",
         "eslint-plugin-react": "^7.20.0",
+        "firebase-tools": "^8.4.2",
         "html-webpack-plugin": "^4.3.0",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
