--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "firebase": "firebase",
         "webpack": "webpack",
         "webpack-dev-server": "webpack-dev-server",
-        "start": "webpack-dev-server --mode=development --devtool=source-map --hot",
-        "build": "webpack --mode=production"
+        "start": "node --require @babel/register ./node_modules/.bin/webpack-dev-server --mode=development --devtool=source-map --hot",
+        "build": "node --require @babel/register ./node_modules/.bin/webpack --mode=production"
     },
     "devDependencies": {
         "@babel/core": "^7.9.6",
@@ -15,6 +15,7 @@
         "@babel/preset-env": "^7.9.6",
         "@babel/preset-react": "^7.9.4",
         "@babel/register": "^7.10.1",
+        "autoprefixer": "^9.8.0",
         "babel-loader": "^8.1.0",
         "copy-webpack-plugin": "^6.0.2",
         "css-loader": "^3.5.3",
@@ -22,6 +23,7 @@
         "eslint-plugin-react": "^7.20.0",
         "firebase-tools": "^8.4.2",
         "html-webpack-plugin": "^4.3.0",
+        "postcss-loader": "^3.0.0",
         "style-loader": "^1.2.1",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
